# LangChainAgent

./: .envsample  .gitignore  README.md  main.py  pyproject.toml  pytest.ini
docs/: BASIC_DESIGN.md
src/: config.py  logging_config.py
src/core/: agent.py  prompts.py
src/tools/: command_execution.py  file_operations.py  internet_search.py  think_tool.py  web_fetch.py  work_tool.py
tests/core/: test_agent_summary_boundary.py
tests/tools/: test_command_execution.py  test_file_operations.py
