[project]
name = "langchaincli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-tavily>=0.2.11",
    "tavily-python>=0.3.3",
    "langchain[google-genai]>=0.3.27",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "typer>=0.19.1",
    "pydantic-core>=2.33.2",
    "pydantic>=2.11.9",
    "langchain-google-genai>=2.0.10",
    "python-dotenv>=1.1.1",
    "pydantic-ai>=1.0.10",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-mock>=3.14.0",
]

